--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -64,9 +64,8 @@
 
 
 
-
    /* Global Styles */
-body {
+   body {
     font-family: "PingFang SC", sans-serif;
     font-weight: 500;
 }
@@ -135,4 +134,300 @@ body {
     border-radius: 10px;
 }
 
+.products-container {
+    width: 100%;
+    height: 100%;
+    max-width: 1200px; /* Adjust this value as needed */
+    margin: 50px auto; /* Adds space around the section */
+    padding: 20px;
+    text-align: center;
+  }
+  
+
+.products-title {
+    font-size: 2.5rem;
+    font-weight: bold;
+    margin-bottom: 20px;
+    text-transform: uppercase;
+    margin-bottom: 20px;
+    color: #000000;
+    font-family: "Poppins", Sans-serif;
+    line-height: 45px;
+}
+
+
+.products-list {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 20px;
+    margin-top: 20px;
+}
+
+.product-card {
+    /* background-color: #1a1a1a; */
+    border-radius: 10px;
+    padding-bottom: 7rem;
+    
+
+    text-align: center;
+    width: 200px;
+    transition: transform 0.3s ease-in-out;
+}
+
+.product-card img {
+    width: 100%;
+    border-radius: 10px;
+    height: 100%;
+    object-fit: cover;
+}
+
+.product-card h3 {
+    margin-top: 50px;
+    font-size: 1.5rem;
+    color: #fff;
+}
+
+.product-card p {
+    font-size: 1rem;
+    color: #ccc;
+}
+
+
+.main-container{
+    align-content: var(--align-content);
+    align-items: var(--align-items);
+    align-self: auto;
+    flex-basis: auto;
+    flex-grow: 1;
+    flex-shrink: 1;
+    flex-wrap: var(--flex-wrap);
+    justify-content: var(--justify-content);
+}
+.products-description{
+    font-family: "PingFang SC", sans-serif;
+    color: #000000;
+    font-size: 20px;
+    margin-bottom: 40px;
+   gap:var(--row-gap) var(--column-gap);
    
+
+
+}
+
+.product-container{
+   
+    background-color: transparent;
+    background-image: linear-gradient(0deg, #000000 60%, #FFFFFF 50%);
+    
+}
+.explore-heading{
+    margin-bottom: 30px;
+    margin-top: 30px;
+    color: #000000;
+    font-family: "Poppins", Sans-serif;
+    font-size: 2.5rem;
+
+    
+}
+.paragraph-last{
+    margin-top: 30px;
+    margin-bottom: 40px;
+    font-family: "PingFang SC", sans-serif;
+    color: #000000;
+    font-size: 20px;
+   gap:var(--row-gap) var(--column-gap);
+
+}
+
+
+
+
+
+
+
+
+
+
+
+.coffee-container {
+    text-align: center;
+    padding: 40px 0;
+  }
+  
+  .coffee-title {
+    font-size: 28px;
+    margin-bottom: 20px;
+  }
+  
+  .coffee-content {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 30px;
+  }
+  
+  .coffee-image {
+    width: 500px;
+    aspect-ratio: auto 500 / 526;
+    height: 526px;
+    margin-right:5% ;
+    margin-left: 5%;
+  }
+  
+  .large-electronics-img {
+    width: 100%;
+    height: 500px;
+    border-radius: 10px;
+  }
+  
+  .coffee-products {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    padding: 1rem;
+    padding-right: 2rem;
+  }
+  
+  .product-row {
+    display: flex;
+    justify-content: space-between;
+    gap: 10px;
+    padding: 1rem;
+  }
+  
+  .coffee-product-card {
+    width: 120px;
+    text-align: center;
+  }
+  
+  .coffee-product-card img {
+    width: 110%;
+    height:90%;
+    border-radius: 8px;
+    margin-right: 0%;
+    
+
+  }
+  
+  .coffee-product-card h4 {
+    margin-top: 5px;
+    font-size: 16px;
+    
+  }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  .new-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 40px;
+    padding: 40px;
+    text-align: center;
+  }
+  
+  .new-list {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+  }
+  
+  .new-card {
+    width: 400px;
+    height: 200px;
+    padding: 20px 20px 20px 20px;
+    box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.5);
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+  }
+  
+  .card-icon-left {
+    position: absolute;
+    top: 5px;
+    right: 10px;
+    color: black;
+    transition: color 0.3s ease;
+    font-size: 50px;
+  }
+  .card-icon-left:hover {
+    color: red;
+  }
+  .card-icon-right {
+    position: absolute;
+    top: 4px;
+    left: 10px;
+    color: black;
+    transition: color 0.3s ease;
+    font-size: 50px;
+  }
+  .card-icon-right:hover {
+    color: red;
+  }
+ .new-title-left {
+  font-size: 25px;
+  font-weight: bold;
+  margin-top: 40px;
+  position: absolute; 
+  right: 10px; 
+  top: 10px; 
+  text-align: right; 
+ }
+ .new-title-right {
+  font-size: 25px;
+  font-weight: bold;
+  margin-top: 40px;
+  position: absolute; 
+  left: 10px; 
+  top: 10px; 
+  text-align: left; 
+}
+
+  
+  .new-desc-left {
+    font-size: 18px;
+    color:black;
+    margin-top: 60px;
+    text-align: right; 
+    position: absolute; 
+    right: 5px; 
+  }
+  .new-desc-right {
+    font-size: 18px;
+    color:black;
+    margin-top: 60px;
+    text-align: left; 
+    position: absolute; 
+    left: 10px; 
+  }
+  
+  .new-image img {
+    width: 600px;
+    height: 400px;
+    border-radius: 10px;
+  }
+  
+  
+
+
+
+
+
+
