--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -74,9 +74,11 @@
 .products-container {
     width: 100%;
     height: 100%;
-    max-width: 91%; /* Adjust this value as needed */
+    max-width: 89%;
+     /* Adjust this value as needed */
     margin: 50px auto; /* Adds space around the section */
     padding: 20px;
+
     text-align: center;
   }
   
@@ -104,21 +106,21 @@
 .product-card {
     /* background-color: #1a1a1a; */
     border-radius: 10px;
-    padding-bottom: 7rem;
+    padding-bottom: 2rem;
     text-align: center;
-    width: 200px;
+    width: 300px;
     transition: transform 0.3s ease-in-out;
 }
 
 .product-card img {
     width: 100%;
     border-radius: 10px;
-    height: 100%;
+    height: 90%;
     object-fit: cover;
 }
 
 .product-card h3 {
-    margin-top: 50px;
+    margin-top: 5px;
     font-size: 1.5rem;
     color: #fff;
 }
@@ -207,7 +209,7 @@
     aspect-ratio: auto 500 / 526;
     height: 526px;
     margin-right:5% ;
-    margin-left: 6%;
+    margin-left: 8%;
   }
   
   .large-electronics-img {
@@ -229,7 +231,7 @@
   .product-row {
     display: flex;
     justify-content: space-around;
-    gap: 10px;
+    gap: 35px;
     padding: 1rem;
   }
   
@@ -249,7 +251,7 @@
   
   .coffee-product-card h4 {
     margin-top: 5px;
-    font-size: 16px;
+    font-size: 20px;
     
   }
 
@@ -356,7 +358,7 @@
   
   .new-image img {
     width: 600px;
-    height: 400px;
+    height: 600px;
     border-radius: 10px;
   }
   
